--- a/MulticlassClassification/MulticlassClassification.csproj
+++ b/MulticlassClassification/MulticlassClassification.csproj
@@ -1,11 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.ML" Version="0.11.0" />
+    <Content Include="Data\**\*">
+	 <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+	<Content Include="MLModels\**\*">
+	 <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <PackageReference Include="Microsoft.ML" Version="1.0.0-preview" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="MLModels" />
   </ItemGroup>
 
 </Project>
